namespaces/live.cloud-platform.service.justice.gov.uk/laa-fee-scheme-api-staging/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-fee-scheme-api-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-fee-scheme-api-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-claims-event-service
  namespace: laa-fee-scheme-api-staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: laa-data-claims-event-service-staging
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-data-claims-api
  namespace: laa-fee-scheme-api-staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: laa-data-claims-api-staging
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-amend-a-claim
  namespace: laa-fee-scheme-api-staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: laa-amend-a-claim-staging
